# intervention-experiment

./: pyproject.toml
code/: find_best_intervention_dir.py  main.py  probe_intervention.py
code/deprecated_liref_paper/: liref_feature_sanity_check.py  liref_style_intervention.py  schedule_batch_job.py
code/deprecated_utilities/: combine_chess_datasets.py  combine_chunks_v1?.py  kk.py  logic.py  publish_to_hf_hub.py
code/experiments/: gsm_symbolic.py  truthfulQA.py
code/jobs/: collect_arithmetic_optimal_base8.py  probe_chunk_job.py  run_arith8_opt.sh  run_arithmetic_base8_optimal_indices.py  run_arithmetic_variant_directions.py  run_cross_task_eval.py  run_snellius_derivation_and_tuning.py  sbatch_collect_arithmetic_optimal_base8.sh  sbatch_run_arithmetic_variant_directions.sh  sbatch_run_cross_task_eval.sh  sbatch_run_derivation_and_tuning_arithmetic.sh  sbatch_run_derivation_and_tuning_chess.sh  sbatch_run_derivation_and_tuning_combined.sh  sbatch_run_derivation_and_tuning_combined_balanced.sh  sbatch_run_derivation_and_tuning_programming.sh  sbatch_run_snellius_derivation_and_tuning.sh  tune_intervention_dir_job.py
notebooks/: analyze_tuning_results.ipynb  cosine_similarity_directions.ipynb  plot_cross_task_eval.ipynb  plot_gsm_tuning_accuracies.ipynb  plot_ranks_and_distributions.ipynb  save_data.ipynb
notebooks/notebooks/: arithmetic.ipynb  chess.ipynb  kk.ipynb  sanity_check.ipynb
scripts/: README.md  activate_venv.sh  run_experiment.sh  run_gpu_job.sh
scripts/intervention/: combine_chunks.sh  run_intervention_chunks_job.sh
(+1 files in other folders)
